--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^4.7.2",
+    "gatsby-source-filesystem": "^4.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
